corrected join_nearest for metric unit and made max_dist 20 (might refer to Wage et al but need to check on ambigous accidents)

--- a/visualization_accident_data.ipynb
+++ b/visualization_accident_data.ipynb
@@ -204,7 +204,7 @@
          "type": "float"
         }
        ],
-       "ref": "de423d6a-66e6-4578-8b4d-b16e4b2725c1",
+       "ref": "151a04fa-caf0-4443-a887-1d474747c67e",
        "rows": [
         [
          "0",
@@ -747,7 +747,7 @@
          "type": "float"
         }
        ],
-       "ref": "b75c3d03-03e6-497f-a02d-0c975edd08bf",
+       "ref": "008aaf6d-fecf-4261-981c-de3573663f0c",
        "rows": [
         [
          "307975",
@@ -1443,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "9e057056",
    "metadata": {},
    "outputs": [
@@ -1453,9 +1453,216 @@
      "text": [
       "Total accidents: 33181\n",
       "Total segments: 4958\n",
-      "Accidents assigned to segments: 20790\n",
-      "Accidents with ambiguous nearest segment: 6\n"
+      "Accidents assigned to segments: 25666\n",
+      "Accidents with ambiguous nearest segment: 43\n",
+      "ratio of assigned accidents: 77.35%\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ULAND</th>\n",
+       "      <th>UREGBEZ</th>\n",
+       "      <th>UKREIS</th>\n",
+       "      <th>UGEMEINDE</th>\n",
+       "      <th>UJAHR</th>\n",
+       "      <th>UMONAT</th>\n",
+       "      <th>USTUNDE</th>\n",
+       "      <th>UWOCHENTAG</th>\n",
+       "      <th>UKATEGORIE</th>\n",
+       "      <th>UART</th>\n",
+       "      <th>...</th>\n",
+       "      <th>IstSonstige</th>\n",
+       "      <th>IstStrassenzustand</th>\n",
+       "      <th>PLST</th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>acc_id</th>\n",
+       "      <th>index_right</th>\n",
+       "      <th>counter_name</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>dist</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>POINT (396236.334 5819327.331)</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2334.0</td>\n",
+       "      <td>streetsegment_2334</td>\n",
+       "      <td>52.514147</td>\n",
+       "      <td>13.470457</td>\n",
+       "      <td>7.926233</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1</td>\n",
+       "      <td>18</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>POINT (398516.598 5813139.667)</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2152.0</td>\n",
+       "      <td>streetsegment_2152</td>\n",
+       "      <td>52.458225</td>\n",
+       "      <td>13.507285</td>\n",
+       "      <td>9.152262</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>POINT (394698.277 5818334.456)</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2494.0</td>\n",
+       "      <td>streetsegment_2494</td>\n",
+       "      <td>52.505557</td>\n",
+       "      <td>13.448913</td>\n",
+       "      <td>0.454646</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>POINT (389600.018 5819665.986)</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1241.0</td>\n",
+       "      <td>streetsegment_1241</td>\n",
+       "      <td>52.515994</td>\n",
+       "      <td>13.373331</td>\n",
+       "      <td>7.009199</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>POINT (393754.303 5821822.206)</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2130.0</td>\n",
+       "      <td>streetsegment_2130</td>\n",
+       "      <td>52.535154</td>\n",
+       "      <td>13.435225</td>\n",
+       "      <td>14.166598</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 34 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ULAND  UREGBEZ  UKREIS  UGEMEINDE  UJAHR  UMONAT  USTUNDE  UWOCHENTAG  \\\n",
+       "2     11        0       2          2   2018       1        8           2   \n",
+       "4     11        0       9          9   2018       1       18           4   \n",
+       "5     11        0       2          2   2018       1       11           7   \n",
+       "6     11        0       1          1   2018       1        8           3   \n",
+       "8     11        0       3          3   2018       1        8           2   \n",
+       "\n",
+       "   UKATEGORIE  UART  ...  IstSonstige  IstStrassenzustand  PLST  \\\n",
+       "2           3     5  ...          NaN                 NaN   NaN   \n",
+       "4           2     5  ...          NaN                 NaN   NaN   \n",
+       "5           3     6  ...          NaN                 NaN   NaN   \n",
+       "6           3     5  ...          NaN                 NaN   NaN   \n",
+       "8           3     6  ...          NaN                 NaN   NaN   \n",
+       "\n",
+       "                         geometry  acc_id  index_right        counter_name  \\\n",
+       "2  POINT (396236.334 5819327.331)       2       2334.0  streetsegment_2334   \n",
+       "4  POINT (398516.598 5813139.667)       4       2152.0  streetsegment_2152   \n",
+       "5  POINT (394698.277 5818334.456)       5       2494.0  streetsegment_2494   \n",
+       "6  POINT (389600.018 5819665.986)       6       1241.0  streetsegment_1241   \n",
+       "8  POINT (393754.303 5821822.206)       8       2130.0  streetsegment_2130   \n",
+       "\n",
+       "    latitude  longitude       dist  \n",
+       "2  52.514147  13.470457   7.926233  \n",
+       "4  52.458225  13.507285   9.152262  \n",
+       "5  52.505557  13.448913   0.454646  \n",
+       "6  52.515994  13.373331   7.009199  \n",
+       "8  52.535154  13.435225  14.166598  \n",
+       "\n",
+       "[5 rows x 34 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1464,9 +1671,10 @@
     "df_bike_berlin = df_bike_berlin.reset_index(drop=True)\n",
     "\n",
     "# transform strava segments and accident locations to GeoDataFrames\n",
-    "strava_segments_gdf = gpd.GeoDataFrame(strava_segments, geometry=\"geometry\", crs=\"EPSG:32633\")\n",
-    "accident_locations_gdf = gpd.GeoDataFrame(df_bike_berlin, geometry=gpd.points_from_xy(df_bike_berlin.XGCSWGS84, df_bike_berlin.YGCSWGS84), crs=\"EPSG:32633\")\n",
-    "\n",
+    "strava_segments_gdf = gpd.GeoDataFrame(strava_segments, geometry=\"geometry\", crs=\"EPSG:4326\")\n",
+    "accident_locations_gdf = gpd.GeoDataFrame(df_bike_berlin, geometry=gpd.points_from_xy(df_bike_berlin.XGCSWGS84, df_bike_berlin.YGCSWGS84), crs=\"EPSG:4326\")\n",
+    "accident_locations_gdf = accident_locations_gdf.to_crs(\"EPSG:32633\")\n",
+    "strava_segments_gdf = strava_segments_gdf.to_crs(\"EPSG:32633\")\n",
     "\n",
     "# Add identifier to accidents\n",
     "accident_locations_gdf = accident_locations_gdf.reset_index(drop=True)\n",
@@ -1477,7 +1685,7 @@
     "    accident_locations_gdf,\n",
     "    strava_segments_gdf,\n",
     "    how=\"left\",\n",
-    "    max_distance=0.0001, # needs to be adjusted based on coordinate system and expected noise in distance, 10m\n",
+    "    max_distance=20,\n",
     "    distance_col=\"dist\"\n",
     ")\n",
     "\n",
@@ -1490,15 +1698,17 @@
     "print(f\"Total segments: {len(strava_segments_gdf)}\")\n",
     "print(f\"Accidents assigned to segments: {len(joined_nearest_unique)}\")\n",
     "print (f\"Accidents with ambiguous nearest segment: {len(joined) - len(joined_nearest_unique)}\")\n",
-    "\n",
+    "print(f\"ratio of assigned accidents: {len(joined_nearest_unique) / len(accident_locations_gdf):.2%}\")\n",
     "\n",
     "strava_segments_gdf = gpd.GeoDataFrame(strava_segments, geometry=\"geometry\", crs=\"EPSG:4326\")\n",
-    "accident_locations_gdf = gpd.GeoDataFrame(df_bike_berlin, geometry=gpd.points_from_xy(df_bike_berlin.LINREFX, df_bike_berlin.LINREFY), crs=\"EPSG:4326\")\n"
+    "accident_locations_gdf = gpd.GeoDataFrame(df_bike_berlin, geometry=gpd.points_from_xy(df_bike_berlin.LINREFX, df_bike_berlin.LINREFY), crs=\"EPSG:4326\")\n",
+    "\n",
+    "joined_nearest_unique.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "90645c13",
    "metadata": {},
    "outputs": [],
@@ -1654,7 +1864,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1668,7 +1878,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
