added section title

--- a/visualization_accident_data.ipynb
+++ b/visualization_accident_data.ipynb
@@ -816,6 +816,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d089aed9",
+   "metadata": {},
+   "source": [
+    "# Spatial Join"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "05ba601f",
    "metadata": {},
    "source": [
@@ -1114,7 +1122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2929c507",
+   "id": "ba1d78a3",
    "metadata": {},
    "source": [
     "### CHECK HOW WELL SPATIAL JOIN WORKS:  This function specifies a box within which all segments and their accidents are plotted"
@@ -1123,7 +1131,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "5c3feecb",
+   "id": "86026e86",
    "metadata": {},
    "outputs": [
     {
@@ -5212,7 +5220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bec9bacc",
+   "id": "557e6377",
    "metadata": {},
    "source": [
     "## code that is probably no longer needed (maybe we will need it again later?):"
@@ -5220,7 +5228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38f6f86a",
+   "id": "2978829e",
    "metadata": {},
    "source": [
     "### This function displays a segment and surrounding accidents. In red the accidents that are assigned to this segment and in black all other accidents. (no longer needed)"
@@ -7282,7 +7290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddfde065",
+   "id": "6778c375",
    "metadata": {},
    "source": [
     "### Map displaying all accidents and strava segments"
@@ -7330,7 +7338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca0b449c",
+   "id": "358cdde4",
    "metadata": {},
    "source": [
     "### Is this code still relevant?"
