--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -1,6 +1,102 @@
-@book{mackay2003information,
-  title={Information theory, inference and learning algorithms},
-  author={MacKay, David JC},
-  year={2003},
-  publisher={Cambridge university press}
+@article{Uijtdewilligen01092024,
+author = {Teun Uijtdewilligen and Mehmet Baran Ulak and Gert Jan Wijlhuizen and Frits Bijleveld and Karst T. Geurs and Atze Dijkstra},
+title = {Examining the crash risk factors associated with cycling by considering spatial and temporal disaggregation of exposure: Findings from four Dutch cities},
+journal = {Journal of Transportation Safety \& Security},
+volume = {16},
+number = {9},
+pages = {945--971},
+year = {2024},
+publisher = {Taylor \& Francis},
+doi = {10.1080/19439962.2023.2273547},
+URL = {https://doi.org/10.1080/19439962.2023.2273547},
+eprint = {https://doi.org/10.1080/19439962.2023.2273547},
 }
+
+@article{Kaiser_Klein_Kaack_2025, 
+title={From counting stations to city-wide estimates: data-driven bicycle volume extrapolation}, 
+volume={4}, 
+DOI={10.1017/eds.2025.5}, 
+journal={Environmental Data Science}, 
+author={Kaiser, Silke K. and Klein, Nadja and Kaack, Lynn H.}, 
+year={2025}, 
+pages={e13}
+}
+
+@misc{kaiser2025spatiotemporalgraphneuralnetwork,
+      title={Spatio-Temporal Graph Neural Network for Urban Spaces: Interpolating Citywide Traffic Volume}, 
+      author={Silke K. Kaiser and Filipe Rodrigues and Carlos Lima Azevedo and Lynn H. Kaack},
+      year={2025},
+      eprint={2505.06292},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2505.06292}, 
+}
+
+@Article{isprs-archives-XLIII-B4-2022-427-2022,
+AUTHOR = {Wage, O. and Bienzeisler, L. and Sester, M.},
+TITLE = {RISK ANALYSIS OF CYCLING ACCIDENTS USING A TRAFFIC DEMAND MODEL},
+JOURNAL = {The International Archives of the Photogrammetry, Remote Sensing and Spatial Information Sciences},
+VOLUME = {XLIII-B4-2022},
+YEAR = {2022},
+PAGES = {427--434},
+URL = {https://isprs-archives.copernicus.org/articles/XLIII-B4-2022/427/2022/},
+DOI = {10.5194/isprs-archives-XLIII-B4-2022-427-2022}
+}
+
+
+@Article{futuretransp1030037,
+AUTHOR = {Medeiros, Rafael Milani and Bojic, Iva and Jammot-Paillet, Quentin},
+TITLE = {Spatiotemporal Variation in Bicycle Road Crashes and Traffic Volume in Berlin: Implications for Future Research, Planning, and Network Design},
+JOURNAL = {Future Transportation},
+VOLUME = {1},
+YEAR = {2021},
+NUMBER = {3},
+PAGES = {686--706},
+URL = {https://www.mdpi.com/2673-7590/1/3/37},
+ISSN = {2673-7590},
+ABSTRACT = {Urban bicycling has been largely marginalized for decades in the global north and south. Despite a renaissance over the last two decades in academic research, political discourse, sustainability activism, and planning, cities often struggle with data quality and quantity. Digitalization has led to more and better data sources, but they still must be validated and compared with findings from conventional travel surveys. With the COVID-19 pandemic, bicycling and associated road facilities expanded, as did road crashes involving bicycles. This study utilized tens of thousands of datapoints sourced by public institutions and digital devices belonging to private companies that have spread across Berlin over the last ten years and are currently ubiquitous. What does an integrated analysis of data from these novel sources reveal for urban bicycling research, planning, and network design? We explored and visualized the relationships and spatiotemporal variations in (i) bicycling volumes and (ii) crashes, unveiling the (iii) distribution of and correlation between datasets and the city’s bikeway network at an unprecedented threshold. The findings can be useful for special interest groups and to guide future urban bicycling research, planning, and network design.},
+DOI = {10.3390/futuretransp1030037}
+}
+
+@misc{Unfallatlas2025,
+  title        = {{Unfallatlas}},
+  author       = {{Statistische Ämter des Bundes und der Länder}},
+  howpublished = {\url{https://unfallatlas.statistikportal.de/}},
+  note         = {Interaktive Kartenanwendung zu Straßenverkehrsunfällen mit Personenschaden in Deutschland},
+  year         = {2025},
+  urldate      = {2025-12-05}
+}
+
+@dataset{kaiser_2025_15332147,
+  author       = {Kaiser, Silke Kirstin},
+  title        = {Data from: Spatio-Temporal Graph Neural Network
+                   for Urban Spaces: Interpolating Citywide Traffic
+                   Volume
+                  },
+  month        = may,
+  year         = 2025,
+  publisher    = {Zenodo},
+  doi          = {10.5281/zenodo.15332147},
+  url          = {https://doi.org/10.5281/zenodo.15332147},
+}
+
+
+@article{luecken2018,
+	abstract = {A prominent policy, which has been proposed in many European municipalities over the last years is the promotion of cycling to decrease pollution and to increase public health. One important part of the assessment of this policy is the estimation of the induced change in bicycle crash numbers. Several recent works supported the ideas by reporting that cycling becomes safer if the number of cyclists increases, i.e., there seems to be a safety-in-numbers effect (SiN).},
+	author = {L{\"u}cken, Leonhard},
+	date = {2018/07/03},
+	date-added = {2025-12-05 13:32:30 +0100},
+	date-modified = {2025-12-05 13:32:30 +0100},
+	doi = {10.1186/s12544-018-0305-9},
+	id = {L{\"u}cken2018},
+	isbn = {1866-8887},
+	journal = {European Transport Research Review},
+	number = {2},
+	pages = {33},
+	title = {On the variation of the crash risk with the total number of bicyclists},
+	url = {https://doi.org/10.1186/s12544-018-0305-9},
+	volume = {10},
+	year = {2018},
+	bdsk-url-1 = {https://doi.org/10.1186/s12544-018-0305-9}}
+
+
